0.18.7	UNRELEASED

 BUG FIXES

  * Make `dulwich.archive` set the gzip header file modification time so that
    archives created from the same Git tree are always identical.
    (#577, Jonas Haag)

  * Allow comment characters (#, ;) within configuration file strings
    (Daniel Andersson, #579)

 IMPROVEMENTS

  * Add a fastimport ``extra``. (Jelmer Vernooĳ)

0.18.6	2017-11-11

 BUG FIXES

  * Fix handling of empty repositories in ``porcelain.clone``.
   (#570, Jelmer Vernooĳ)

  * Raise an error when attempting to add paths that are not under the
    repository. (Jelmer Vernooĳ)

  * Fix error message for missing trailing ]. (Daniel Andersson)

  * Raise EmptyFileException when corruption (in the form of an empty
    file) is detected. (Antoine R. Dumont, #582)

  IMPROVEMENTS

  * Enforce date field parsing consistency. This also add checks on
    those date fields for potential overflow.
    (Antoine R. Dumont, #567)

0.18.5	2017-10-29

 BUG FIXES

  * Fix cwd for hooks. (Fabian Grünbichler)

  * Fix setting of origin in config when non-standard origin is passed into
    ``Repo.clone``. (Kenneth Lareau, #565)

  * Prevent setting SSH arguments from SSH URLs when using SSH through a
    subprocess. Note that Dulwich doesn't support cloning submodules.
    (CVE-2017-16228) (Jelmer Vernooĳ)

 IMPROVEMENTS

  * Silently ignored directories in ``Repo.stage``.
    (Jelmer Vernooĳ, #564)

 API CHANGES

  * GitFile now raises ``FileLocked`` when encountering a lock
    rather than OSError(EEXIST). (Jelmer Vernooĳ)

0.18.4	2017-10-01

 BUG FIXES

  * Make default User-Agent start with "git/" because GitHub won't response to
    HTTP smart server requests otherwise (and reply with a 404).
    (Jelmer vernooĳ, #562)

0.18.3	2017-09-03

 BUG FIXES

  * Read config during porcelain operations that involve remotes.
    (Jelmer Vernooĳ, #545)

  * Fix headers of empty chunks in unified diffs. (Taras Postument, #543)
