@@ -13,6 +13,12 @@
 
   * Add a fastimport ``extra``. (Jelmer Vernooĳ)
 
+ API CHANGES
+
+  * ``GitClient.send_pack`` now accepts a ``generate_pack_data``
+    rather than a ``generate_pack_contents`` function for
+    performance reasons. (Jelmer Vernooĳ)
+
 0.18.6	2017-11-11
 
  BUG FIXES
